// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldRadio 1`] = `
.c5 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  background-color: currentColor;
  border: solid 1px #DEE1E5;
  border-color: currentColor;
  border-radius: 50%;
  color: transparent;
  height: 100%;
  position: relative;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  width: 100%;
}

.c5::after {
  background: #fff;
  border-radius: 50%;
  content: '';
  height: 6px;
  position: absolute;
  right: calc(50% - 3px);
  top: calc(50% - 3px);
  width: 6px;
}

.c3 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  height: 1rem;
  position: relative;
  width: 1rem;
}

.c3 input {
  background: #FFFFFF;
  height: 100%;
  opacity: 0;
  position: absolute;
  width: 100%;
  z-index: 1;
}

.c3 input:checked + .c4 {
  color: #6C43E0;
}

.c3 input:not(:checked) + .c4 {
  background: #FFFFFF;
  border-color: #DEE1E5;
}

.c3 input:focus + .c4 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c3 input:disabled + .c4 {
  color: #939BA5;
}

.c3 input:disabled:not(:checked) + .c4 {
  background: #F5F6F7;
}

.c3 input:disabled:not(:checked) + .c4::after {
  background: #F5F6F7;
}

.c2 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  color: #343C42;
  font-size: 0.75rem;
  font-weight: 500;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-areas: 'input label detail' '. messages messages';
  grid-template-columns: repeat(2,max-content) 1fr;
  line-height: 1.25rem;
}

.c0 .{
  grid-area: input;
}

.c0 .c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: normal;
  grid-area: label;
  padding-left: 0.5rem;
}

.c0 .sc-iNiQeE {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: detail;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-left: 0.25rem;
}

.c0 .{
  grid-area: messages;
  padding-left: 0.75rem;
}

<label
  className="c0 "
  htmlFor="FieldRadioID"
>
  <span
    className="c1 c2"
  >
    👍
  </span>
  <div
    className=""
  >
    <div
      className="c3 "
    >
      <input
        aria-describedby="FieldRadioID-describedby"
        id="FieldRadioID"
        name="thumbsUp"
        type="radio"
      />
      <div
        className="c4 c5"
      />
    </div>
  </div>
  <div
    className=""
    id="FieldRadioID-describedby"
  />
</label>
`;

exports[`A FieldRadio checked 1`] = `
.c5 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  background-color: currentColor;
  border: solid 1px #DEE1E5;
  border-color: currentColor;
  border-radius: 50%;
  color: transparent;
  height: 100%;
  position: relative;
  -webkit-transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  transition: background-color 25ms linear,border-color 25ms linear,box-shadow 25ms linear;
  width: 100%;
}

.c5::after {
  background: #fff;
  border-radius: 50%;
  content: '';
  height: 6px;
  position: absolute;
  right: calc(50% - 3px);
  top: calc(50% - 3px);
  width: 6px;
}

.c3 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  height: 1rem;
  position: relative;
  width: 1rem;
}

.c3 input {
  background: #FFFFFF;
  height: 100%;
  opacity: 0;
  position: absolute;
  width: 100%;
  z-index: 1;
}

.c3 input:checked + .c4 {
  color: #6C43E0;
}

.c3 input:not(:checked) + .c4 {
  background: #FFFFFF;
  border-color: #DEE1E5;
}

.c3 input:focus + .c4 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c3 input:disabled + .c4 {
  color: #939BA5;
}

.c3 input:disabled:not(:checked) + .c4 {
  background: #F5F6F7;
}

.c3 input:disabled:not(:checked) + .c4::after {
  background: #F5F6F7;
}

.c2 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  color: #343C42;
  font-size: 0.75rem;
  font-weight: 500;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-areas: 'input label detail' '. messages messages';
  grid-template-columns: repeat(2,max-content) 1fr;
  line-height: 1.25rem;
}

.c0 .{
  grid-area: input;
}

.c0 .c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: normal;
  grid-area: label;
  padding-left: 0.5rem;
}

.c0 .sc-iNiQeE {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: detail;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-left: 0.25rem;
}

.c0 .{
  grid-area: messages;
  padding-left: 0.75rem;
}

<label
  className="c0 "
  htmlFor="FieldRadioID"
>
  <span
    className="c1 c2"
  >
    👍
  </span>
  <div
    className=""
  >
    <div
      className="c3 "
    >
      <input
        aria-describedby="FieldRadioID-describedby"
        checked={true}
        id="FieldRadioID"
        name="thumbsUp"
        type="radio"
      />
      <div
        className="c4 c5"
      />
    </div>
  </div>
  <div
    className=""
    id="FieldRadioID-describedby"
  />
</label>
`;
